# lagrit-bindings-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  lagrit_bindings.pyi  pyproject.toml  requirements.in
examples/: cli.rs  ex1.rs
lagrit-sys/: Cargo.toml  build.rs
lagrit-sys/src/: bindings.f90  bindings.h
python/pylagrit/: __init__.py  cell_type_maps.py  core.py
python/tests/: test_pylagrit.py
src/: error.rs  ffi.rs  lib.rs  obj.rs  py.rs  utils.rs
src/objects/: lg.rs  mo.rs  mod.rs
