[package]
name = "lagrit-bindings-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lagrit-sys"]

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[dependencies]
lagrit-sys = { version = "0.1.0", path = "lagrit-sys" }
pyo3 = { version = "0.23", features = ["abi3-py38"], optional = true }
thiserror = "2.0"

[lib]
name = "lagrit_bindings"
crate-type = ["cdylib", "rlib"]
